[gd_scene load_steps=6 format=3 uid="uid://0a0101a0a0a0"]

[ext_resource type="Script" path="res://time_tracking_ui.gd" id="1_hbku8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfxwa"]
bg_color = Color(0.113725, 0.113725, 0.168627, 0.831373)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7gxi"]
bg_color = Color(0.282353, 0.392157, 0.678431, 0.34902)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmy2n"]
bg_color = Color(0.282353, 0.392157, 0.678431, 0.25098)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3qcy"]
bg_color = Color(0.282353, 0.392157, 0.678431, 0.14902)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="TimeTrackingUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 160.0
grow_horizontal = 0
mouse_filter = 1
script = ExtResource("1_hbku8")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_lfxwa")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.0
offset_top = 10.0
offset_right = 95.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "00:00:00"
horizontal_alignment = 1

[node name="SymbolContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -25.0
offset_right = 45.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(45, 25)

[node name="SymbolLayers" type="Control" parent="SymbolContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 0)

[node name="Layer3" type="Panel" parent="SymbolContainer/SymbolLayers"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(45, 45)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3qcy")

[node name="Layer2" type="Panel" parent="SymbolContainer/SymbolLayers"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 35)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xmy2n")

[node name="Layer1" type="Panel" parent="SymbolContainer/SymbolLayers"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b7gxi")

[node name="SymbolLabel" type="Label" parent="SymbolContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 13)
theme_override_font_sizes/font_size = 24
text = "#"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -70.0
offset_right = 95.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Mode: Standard"
horizontal_alignment = 1

[node name="TurnLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -40.0
offset_right = 95.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Turn: 3 - Complexity"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]